@@ -3,6 +3,7 @@ package uk.gov.hmcts.reform.preapi.batch.application.services.validation;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.preapi.batch.application.enums.VfFailureReason;
+import uk.gov.hmcts.reform.preapi.batch.application.enums.VfMigrationRecordingVersion;
 import uk.gov.hmcts.reform.preapi.batch.application.services.MigrationRecordService;
 import uk.gov.hmcts.reform.preapi.batch.application.services.reporting.LoggingService;
 import uk.gov.hmcts.reform.preapi.batch.config.Constants;
@@ -19,6 +20,10 @@ public class DataValidationService {
     private final MigrationRecordService migrationRecordService;
     private final MigrationRecordRepository migrationRecordRepository;
     private final LoggingService loggingService;
+
+    private static int MIN_CASE_REFERENCE_LENGTH = 9;
+    private static int MAX_CASE_REFERENCE_LENGTH = 24;
+    private static int MIN_VERSION_NUMBER = 1;
 
     @Autowired
     public DataValidationService(final MigrationRecordService migrationRecordService,
@@ -37,13 +42,13 @@ public class DataValidationService {
     public ServiceResult<ProcessedRecording> validateProcessedRecording(
             ProcessedRecording cleansedData) {
 
-       
+
         if (cleansedData.getCourt() == null) {
             return ServiceResultUtil.failure(Constants.ErrorMessages.MISSING_COURT,
                 VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
-        if ("COPY".equalsIgnoreCase(cleansedData.getExtractedRecordingVersion())) {
+        if (VfMigrationRecordingVersion.COPY.toString().equalsIgnoreCase(cleansedData.getExtractedRecordingVersion())) {
             Optional<MigrationRecord> currentRecord = migrationRecordService.findByArchiveId(
                 cleansedData.getArchiveId());
 
@@ -55,11 +60,11 @@ public class DataValidationService {
             }
         }
 
-        if ("COPY".equalsIgnoreCase(cleansedData.getExtractedRecordingVersion())) {
+        if (VfMigrationRecordingVersion.COPY.toString().equalsIgnoreCase(cleansedData.getExtractedRecordingVersion())) {
             boolean isMostRecent = migrationRecordRepository
                 .getIsMostRecent(cleansedData.getArchiveId())
                 .orElse(false);
-                        
+
             if (!isMostRecent) {
                 return ServiceResultUtil.failure(
                     Constants.ErrorMessages.NOT_MOST_RECENT_VERSION,
@@ -68,17 +73,15 @@ public class DataValidationService {
             }
         }
 
-        
-
         String caseReference = cleansedData.getCaseReference();
-        if (caseReference == null || caseReference.length() < 9) {
+        if (caseReference == null || caseReference.length() < MIN_CASE_REFERENCE_LENGTH) {
             return ServiceResultUtil.failure(
                 Constants.ErrorMessages.CASE_REFERENCE_TOO_SHORT,
                 VfFailureReason.INCOMPLETE_DATA.toString()
             );
         }
 
-        if (caseReference.length() > 24) {
+        if (caseReference.length() > MAX_CASE_REFERENCE_LENGTH) {
             return ServiceResultUtil.failure(
                 Constants.ErrorMessages.CASE_REFERENCE_TOO_LONG,
                 VfFailureReason.INCOMPLETE_DATA.toString()
@@ -92,8 +95,6 @@ public class DataValidationService {
             );
         }
 
-       
-
         return ServiceResultUtil.success(cleansedData);
     }
 
@@ -106,31 +107,30 @@ public class DataValidationService {
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
-
         String caseReference = cleansedData.getCaseReference();
-        if (caseReference == null || caseReference.length() < 9) {
+        if (caseReference == null || caseReference.length() < MIN_CASE_REFERENCE_LENGTH) {
             return ServiceResultUtil.failure(Constants.ErrorMessages.CASE_REFERENCE_TOO_SHORT,
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
-        if (caseReference.length() > 24) {
+        if (caseReference.length() > MAX_CASE_REFERENCE_LENGTH) {
             return ServiceResultUtil.failure(Constants.ErrorMessages.CASE_REFERENCE_TOO_LONG,
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
         String witness = cleansedData.getWitnessFirstName();
-        if (witness == null || witness.trim().isEmpty()) {
+        if (witness == null || witness.isBlank()) {
             return ServiceResultUtil.failure("Missing or empty witness first name",
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
         String defendant = cleansedData.getDefendantLastName();
-        if (defendant == null || defendant.trim().isEmpty()) {
+        if (defendant == null || defendant.isBlank()) {
             return ServiceResultUtil.failure("Missing or empty defendant last name",
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
 
-        if (cleansedData.getRecordingVersionNumber() < 1) {
+        if (cleansedData.getRecordingVersionNumber() < MIN_VERSION_NUMBER) {
             return ServiceResultUtil.failure("Invalid recording version number",
                                              VfFailureReason.INCOMPLETE_DATA.toString());
         }
@@ -142,6 +142,6 @@ public class DataValidationService {
         return ServiceResultUtil.success(cleansedData);
     }
 
-    
+
 
 }
